Comenzar Index.cshtml

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,8 @@
 }
 
 <div>
-    <h1>Index</h1>
-    <p>Bienvenidos al sitio web de NombreProyecto</p>
+    <h1>Bienvenido/a a Escape Pirata</h1>
+    <div>
+        <!-- por hacer: imgs descriptivas + slogan -->
+    </div>
 </div>
