--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -10,14 +10,25 @@ html {
 }
 
 body {
-  margin: 10px;
-  padding: 10px;
+  margin: 0;
+  padding: 0;
 }
 
+header {
+  display: flex;
+}
+header img {
+  width: 10%;
+  height: 10%;
+}
 
-footer {
-  margin-top: 10px;
-  padding: 10px;
-  background-color: #f8f9fa;
-  border-top: 1px solid #e9ecef;
+ul {
+  display: flex;
+  list-style: none;
+  padding: 0;
+}
+li {
+  padding: 3px;
+  border: solid 1px white;
+  border-radius: 2px;
 }
