Añadir link creditos al Index

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,4 +7,5 @@
     <div>
         <!-- por hacer: imgs descriptivas + slogan -->
     </div>
+    <p><a href='@Url.Action("Creditos")'>Creditos</a></p>
 </div>
