--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using PROG_2024_TP05_Tjor
-@using PROG_2024_TP05_Tjor.Models
+﻿@using PROG_2024_TP05_Chinski_Korngold_Tjor
+@using PROG_2024_TP05_Chinski_Korngold_Tjor.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
