Añadir fuentes y comenzar a modificar CSS

--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Index";
 }
 
-<div>
+<div class="centrado">
     <h1>Bienvenido/a a Escape Pirata</h1>
     <div>
         <!-- por hacer: imgs descriptivas + slogan -->
