Nuevas habitaciones: 2 y 3 (en proceso)

--- a/Views/Home/Habitacion1.cshtml
+++ b/Views/Home/Habitacion1.cshtml
@@ -21,5 +21,6 @@
                 <input type="submit" value="🔒">
             }
         </p>
+        <p>No escribir tildes.</p>
     </form>
 </div>
