de todo un poco 👌

--- a/Views/Home/Habitacion3.cshtml
+++ b/Views/Home/Habitacion3.cshtml
@@ -4,16 +4,15 @@
 
 <div class="centrado">
     <h1>Cubierta</h1>
-    <p>En el centro de la habitación, encontrarás una mesa cubierta con cartas de piratas dispuestas en un patrón intrigante. Cada carta tiene un símbolo único que te transporta al mundo pirata, desde calaveras y cofres del tesoro hasta brújulas y mapas del tesoro.</p>
+    <p>
+Al abrir la puerta hacia la tercera sala de la sala de escape, me encuentro transportado a la cubierta del barco pirata. El suelo de madera cruje bajo mis pies mientras navego entre barriles vacíos y redes desgastadas que cuelgan del techo. El ambiente está impregnado con el olor a sal marina y a aventura. A lo lejos, la figura de un timón antiguo y oxidado domina el centro de la cubierta, mientras que en las paredes cuelgan mapas descoloridos y dagas ornamentadas.En esta cubierta encontraras desafios y acertijos con el fin de pasar a la siguiente etapa.
+</p>
+<p>Buena suerte!!</p>
 
-    <audio autoplay loop>
-        <source src="~/audio/loros.mp3" type="audio/mpeg">
-    </audio>
 
-    <div style="position: relative; width: 100%; height: 100%;">
-        <img src="~/img/Camarote.jpg" alt="Camarote">
-        <a href="~/img/pergamino.png"><img src="~/img/pergamino.png" alt="Pergamino" style="position: absolute; top: 50%; transform: translate(-50%, -50%); width: 80px;"></a>
-    </div>
+
+    <!-- Loro -->
+    <!-- [memotest acá] -->
 
     <form action='@Url.Action("Habitacion")'>
         <p>
