--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,8 +4,9 @@
 
 <div class="centrado">
     <h1>Bienvenido/a a Escape Pirata</h1>
-    <div>
+    <div class = "imagenes-descriptivas-slogan">
         <!-- por hacer: imgs descriptivas + slogan -->
+        <img src="~/img/gifindex.gif" alt="Camarote">
     </div>
     <p><a href='@Url.Action("Creditos")'>Creditos</a></p>
 </div>
