--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <img src="~/img/logo.jpeg">
+        <a href='@Url.Action("")'><img src="~/img/logo.jpeg"></a>
         <nav>
             <ul>
                 <li><a href='@Url.Action("Tutorial")'>Tutorial</a></li>
