Nuevos cambios: habitación 3 e input hidden

--- a/Views/Home/Creditos.cshtml
+++ b/Views/Home/Creditos.cshtml
@@ -5,7 +5,11 @@
 <div class="centrado">
     <h1>Creditos</h1>
     
-    
-    
+    <img src="~/img/Creditos.jpeg">
+    <ul class="expandido">
+        <li>Tomás "Korgol" Korngold</li>
+        <li>David Chinski</li>
+        <li>Lucas Tjor</li>
+    </ul>
 
 </div>
