--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
     <h1>Bienvenido/a a Escape Pirata</h1>
     <div class = "imagenes-descriptivas-slogan">
         <!-- por hacer: imgs descriptivas + slogan -->
-        <img src="~/img/gifindex.gif" alt="Camarote">
+        <img src="~/img/Index.gif" alt="Camarote">
     </div>
     <p><a href='@Url.Action("Creditos")'>Creditos</a></p>
 </div>
