--- a/Views/Home/Habitacion1.cshtml
+++ b/Views/Home/Habitacion1.cshtml
@@ -12,7 +12,7 @@
 
     <form action='@Url.Action("Habitacion")'>
         <p>
-            <input type="number" name="sala" value="1" required>
+            <input type="hidden" name="sala" value="1">
             @if (ViewBag.Error != null) {
                 <input type="text" name="clave" placeholder="@ViewBag.Error" required>
                 <input class="rebotado" type="submit" value="🔒">
