--- a/Views/Home/Habitacion3.cshtml
+++ b/Views/Home/Habitacion3.cshtml
@@ -11,7 +11,14 @@
     <p>Al abrir la puerta hacia la tercera sala de la sala de escape, me encuentro transportado a la cubierta del barco pirata. El suelo de madera cruje bajo mis pies mientras navego entre barriles vacíos y redes desgastadas que cuelgan del techo. El ambiente está impregnado con el olor a sal marina y a aventura. A lo lejos, la figura de un timón antiguo y oxidado domina el centro de la cubierta, mientras que en las paredes cuelgan mapas descoloridos y dagas ornamentadas.En esta cubierta encontraras desafios y acertijos con el fin de pasar a la siguiente etapa.</p>
     <p>Buena suerte!!</p>
 
-    <div id="memotest"></div>
+    <img id="loro" src="~/img/Loro.gif" alt="Loro pirata">
+
+    <div id="memotest">
+        <noscript>
+            <p>Lo siento, pero esta parte de la aventura requiere de Javascript. Por favor, habilitelo si quiere continuar.</p>
+            <p>Entendemos si de lo contrario desea abandonar el sitio.</p>
+        </noscript>
+    </div>
     
     <form action='@Url.Action("Habitacion")'>
         <p>
@@ -28,3 +35,4 @@
     </form>
 </div>
 
+<script src="~/js/Habitacion3.js"></script>
