Terminar pergamino, añadir audio Morse y renombrar archivos

--- a/Views/Home/Habitacion3.cshtml
+++ b/Views/Home/Habitacion3.cshtml
@@ -3,7 +3,7 @@
 }
 
 <audio loop autoplay>
-    <source src="~/audio/loros.mp3" type="audio/mpeg" />
+    <source src="~/audio/h3-loros.mp3" type="audio/mpeg" />
 </audio>
 
 <div class="centrado">
