--- a/Views/Home/Habitacion2.cshtml
+++ b/Views/Home/Habitacion2.cshtml
@@ -2,15 +2,19 @@
     ViewData["Title"] = "Bienvenido/a a nuestro camarote";
 }
 
+<audio loop autoplay>
+    <source src="~/audio/h2-morse.mp3" type="audio/mpeg" />
+</audio>
+
 <div class="centrado">
     <h1>Bienvenido/a a nuestro camarote</h1>
     <p>¡Bienvenidos a la segunda etapa de vuestra aventura de escape en alta mar! Habéis superado con éxito los desafíos de la bodega principal y ahora nos adentramos en el misterioso camarote del capitán.</p>
     <p>¡La aventura te espera! Recuerden trabajar en equipo, observar cada detalle y estar preparados para cualquier sorpresa que pueda surgir en su camino. El destino de la tripulación depende de su habilidad para resolver los enigmas que los esperan en esta segunda sala.</p>
     <p>¿Estan listos para desafiar sus mentes y corazones en esta travesía? </p>
 
-    <div style="position: relative; width: 100%; height: 100%;">
-        <img src="~/img/Camarote.jpg" alt="Camarote">
-        <a href="~/img/pergamino.png"><img src="~/img/pergamino.png" alt="Pergamino" style="position: absolute; top: 50%; transform: translate(-50%, -50%); width: 80px;"></a>
+    <div class="imagenInteractiva">
+        <img src="~/img/h2-camarote.jpg" alt="Camarote">
+        <img id="pergamino" src="~/img/h2-pergamino.png" alt="Pergamino">
     </div>
 
     <form action='@Url.Action("Habitacion")'>
