--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -46,7 +46,7 @@ p {
   margin: 6px 0;
 }
 
-.imagenes-descriptivas-slogan{
+.imagenes-descriptivas-slogan {
   width: 70%;
   height: 60%;
 }
@@ -59,14 +59,11 @@ p {
   margin: 1.5%;
 }
 
-.sotano{
-align-items: stretch;
-
+.sotano {
+  align-items: stretch;
 }
-.form{
-
+.form {
   display: flex;
- 
   align-items: center;
 }
 
@@ -121,10 +118,32 @@ ul {
 
 
 
-#imagen_interactiva {
+.imagenInteractiva {
   position: relative;
   width: 100%;
   height: 100%;
+}
+#pergamino {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  width: 8%;
+  transform: rotate(8deg);
+}
+.imagenInteractiva img:hover {
+  background-image: url("/img/mano.jpg");
+  background-position: bottom right;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  top: 0%;
+  left: 0%;
+  transition: 0.2s;
+}
+.imagenInteractiva #pergamino:hover {
+  top: 15%;
+  left: 10%;
+  width: 50%;
+  transform: rotate(0);
 }
 
 
