Cambios ern el controller y finalizacion de la shabitaciones, aunque falta algo del js, (los cambios del controller y de la sala escape era para que cuando vuelva a comenzar el juego te tome las respuestas correctamente

--- a/Views/Home/Habitacion3.cshtml
+++ b/Views/Home/Habitacion3.cshtml
@@ -11,7 +11,7 @@
     <p>Al abrir la puerta hacia la tercera sala de la sala de escape, me encuentro transportado a la cubierta del barco pirata. El suelo de madera cruje bajo mis pies mientras navego entre barriles vacíos y redes desgastadas que cuelgan del techo. El ambiente está impregnado con el olor a sal marina y a aventura. A lo lejos, la figura de un timón antiguo y oxidado domina el centro de la cubierta, mientras que en las paredes cuelgan mapas descoloridos y dagas ornamentadas.En esta cubierta encontraras desafios y acertijos con el fin de pasar a la siguiente etapa.</p>
     <p>Buena suerte!!</p>
 
-    <img id="loro" src="~/img/Loro.gif" alt="Loro pirata">
+    <img id="loro" src="~/img/h3-loro.gif" alt="Loro pirata">
 
     <div id="memotest">
         <noscript>
