--- a/Views/Home/Habitacion5.cshtml
+++ b/Views/Home/Habitacion5.cshtml
@@ -4,10 +4,11 @@
 
 <div class="centrado">
     <h1>Bienvenido/a a la fase final. Mucha Suerte.</h1>
-    <p>¡Bienvenidos, intrépidos buscadores de fortuna, a la oscura y temida Guarida del Capitán Negro! Aquí, en las profundidades olvidadas del océano, se esconde el tesoro más codiciado y custodiado por el espíritu vengativo del capitán y su tripulación perdida. La atmósfera es opresiva y el eco de sus pasos resonará en las almas de aquellos que osen desafiar la maldición que yace sobre este lugar. </p>
-    <p> Caminen con cautela entre los restos de quienes vinieron antes que ustedes, ahora devorados por la avaricia y el abismo. Las antorchas titilantes apenas disipan las sombras que se esconden entre los huesos descarnados y las cadenas herrumbrosas que anuncian un destino similar para los que fracasen en este último juicio. El cofre, viejo y ominoso, espera impaciente, prometiendo tesoros inimaginables, pero también el precio más alto que un alma puede pagar. </p>
-    <p> Solo aquellos lo suficientemente valientes para enfrentar la verdad oculta en las estrellas y reflejada en el espejo ancestral podrán escapar de la maldición eterna que acecha en la Guarida del Capitán Negro. Que sus decisiones y respuestas no solo decidan su destino, sino también el destino de los que vinieron antes y no encontraron la salida. </p>
+    <p>¡Bienvenidos, intrépidos buscadores de fortuna, a la oscura y temida Guarida del Capitán Negro! Aquí, en las proFundidades olvidadas dEl océano, se esconde eL tesoro más codiciado y custodiado por el espíritu vengativo del capitán y su trIpulación perdida. La atmósfera es opresiva y el eco de sus pasos resonará en las almas de aquellos que osen desafiar la maldición que yace sobre este lugar. </p>
+    <p> Caminen con cautela entre los restos de quienes vinieron antes que ustedes, ahora devorados por la avariCia y el abismo. Las antorchas titIlantes apenas disipan las sombras que se esconden entre los huesos descarnados y las caDenas herrumbrosas que anuncian un destino similAr para los que fracasen en este último juicio. El cofre, viejo y ominoso, espera impaciente, prometiendo tesoros inimaginables, pero también el precio más alto que un alma pueDe pagar. </p>
+    <p> Solo aquellos lo suficientemente valientes para enfrentar la verdad oculta en las estrellas y reflejada en el espejo ancestral podrán escapar de la maldición eterna que acecha en la Guarida del Capitán Negro. Que sus decisiones y respuestas no solo decidan su dEstino, sino también el destino de los que vinieron anteS y no encontraron la salida. </p>
 
+    <img src="~/img/Tesoro.jpg" alt="Tesoro">
 
 
     <form class = "form" action='@Url.Action("Habitacion")'>
@@ -21,6 +22,6 @@
                 <input type="submit" value="🔒">
             }
         </p>
-        <p>No escribir tildes.</p>
+        <p>Todo minusculas.</p>
     </form>
 </div>
