--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -128,7 +128,7 @@ ul {
   top: 50%;
   left: 20%;
   width: 8%;
-  transform: rotate(8deg);
+  transform: rotate(-8deg);
 }
 .imagenInteractiva img:hover {
   background-image: url("/img/mano.jpg");
@@ -147,6 +147,16 @@ ul {
 }
 
 
+#cubierta {
+  background-image: url("/img/h3-cubierta.jpg");
+  background-position: center;
+  background-size: cover;
+  width: 100%;
+}
+#imagenLoro {
+  width: 25%;
+  height: auto;
+}
 #memotest {
   width: 100%;
 }
@@ -156,7 +166,8 @@ ul {
   font-size: 42px;
   border: solid 1px #c8c8c6;
   border-radius: 5px;
-  margin-right: 1%;
+  margin-left: 0.5%;
+  margin-right: 0.5%;
   margin-bottom: 1%;
 }
 .carta:hover {
