--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -130,6 +130,13 @@ ul {
   width: 8%;
   transform: rotate(-8deg);
 }
+#tabla_de_codigos {
+  position: absolute;
+  bottom: 10%;
+  right: 20%;
+  width: 8%;
+  transform: rotateX(60deg) rotateY(10deg) rotateZ(50deg);
+}
 .imagenInteractiva img:hover {
   background-image: url("/img/mano.jpg");
   background-position: bottom right;
@@ -143,6 +150,13 @@ ul {
   top: 15%;
   left: 10%;
   width: 50%;
+  transform: rotate(0);
+}
+.imagenInteractiva #tabla_de_codigos:hover {
+  position: absolute;
+  top: 3%;
+  right: 10%;
+  width: 40%;
   transform: rotate(0);
 }
 
