--- a/Views/Home/Habitacion1.cshtml
+++ b/Views/Home/Habitacion1.cshtml
@@ -8,6 +8,7 @@
     <p>Miras a tu alrededor y ves barriles, cajas y sacos apilados por todas partes. El aire huele a madera vieja, pólvora y ron. Tienes solo 60 minutos para escapar de este lúgubre calabozo antes de que los piratas decidan deshacerse de ti.</p>
     <p>Deberás usar toda tu astucia y habilidad para resolver acertijos, descifrar mapas ocultos, encontrar tesoros escondidos y burlar las trampas que han dispuesto para ti. Sólo así podrás recuperar la libertad y escapar de las garras de estos temibles piratas. <i>(aargh)</i></p>
     
+    
     <div class="imagenInteractiva">
         <img src="~/img/h1-bodega_amanecer.jpg" alt="Bodega">
     </div>
@@ -16,10 +17,10 @@
         <p>
             <input type="hidden" name="sala" value="1">
             @if (ViewBag.Error != null) {
-                <input type="text" name="clave" placeholder="@ViewBag.Error" required>
+                <input type="text" name="clave" placeholder="@ViewBag.Error" autocomplete="off" required>
                 <input class="rebotado" type="submit" value="🔒">
             } else {
-                <input type="text" name="clave" placeholder="Clave" required>
+                <input type="text" name="clave" placeholder="Clave" autocomplete="off" required>
                 <input type="submit" value="🔒">
             }
         </p>
