--- a/Views/Home/Habitacion2.cshtml
+++ b/Views/Home/Habitacion2.cshtml
@@ -21,10 +21,10 @@
         <p>
             <input type="hidden" name="sala" value="2">
             @if (ViewBag.Error != null) {
-                <input type="text" name="clave" placeholder="@ViewBag.Error" required>
+                <input type="text" name="clave" placeholder="@ViewBag.Error" autocomplete="off" required>
                 <input class="rebotado" type="submit" value="🔒">
             } else {
-                <input type="text" name="clave" placeholder="Clave" required>
+                <input type="text" name="clave" placeholder="Clave" autocomplete="off" required>
                 <input type="submit" value="🔒">
             }
         </p>
