--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -123,20 +123,6 @@ ul {
   width: 100%;
   height: 100%;
 }
-#pergamino {
-  position: absolute;
-  top: 50%;
-  left: 20%;
-  width: 8%;
-  transform: rotate(-8deg);
-}
-#tabla_de_codigos {
-  position: absolute;
-  bottom: 10%;
-  right: 20%;
-  width: 8%;
-  transform: rotateX(60deg) rotateY(10deg) rotateZ(50deg);
-}
 .imagenInteractiva img:hover {
   background-image: url("/img/mano.jpg");
   background-position: bottom right;
@@ -146,18 +132,31 @@ ul {
   left: 0%;
   transition: 0.2s;
 }
-.imagenInteractiva #pergamino:hover {
+#pergamino {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  width: 8%;
+  transform: rotate(-8deg);
+}
+#tabla_de_codigos {
+  position: absolute;
+  top: 72%;
+  left: 70%;
+  width: 8%;
+  transform: rotateX(60deg) rotateY(10deg) rotateZ(50deg);
+}
+#pergamino:hover {
   top: 15%;
   left: 10%;
   width: 50%;
   transform: rotate(0);
 }
-.imagenInteractiva #tabla_de_codigos:hover {
-  position: absolute;
+#tabla_de_codigos:hover {
   top: 3%;
-  right: 10%;
-  width: 40%;
+  left: 58%;
   transform: rotate(0);
+  width: 40%;
 }
 
 
