Eliminar clases form y cambiar titulos

--- a/Views/Home/Habitacion2.cshtml
+++ b/Views/Home/Habitacion2.cshtml
@@ -1,5 +1,5 @@
 @{
-    ViewData["Title"] = "Bienvenido/a a nuestro camarote";
+    ViewData["Title"] = "Camarote";
 }
 
 <audio loop autoplay>
@@ -7,10 +7,10 @@
 </audio>
 
 <div class="centrado">
-    <h1>Bienvenido/a a nuestro camarote</h1>
+    <h1>Camarote</h1>
     <p>¡Bienvenidos a la segunda etapa de vuestra aventura de escape en alta mar! Habéis superado con éxito los desafíos de la bodega principal y ahora nos adentramos en el misterioso camarote del capitán.</p>
     <p>¡La aventura te espera! Recuerden trabajar en equipo, observar cada detalle y estar preparados para cualquier sorpresa que pueda surgir en su camino. El destino de la tripulación depende de su habilidad para resolver los enigmas que los esperan en esta segunda sala.</p>
-    <p>¿Estan listos para desafiar sus mentes y corazones en esta travesía? </p>
+    <p>¿Estan listos para desafiar sus mentes y corazones en esta travesía?</p>
 
     <div class="imagenInteractiva">
         <img src="~/img/h2-camarote.jpg" alt="Camarote">
