--- a/Views/Home/Habitacion4.cshtml
+++ b/Views/Home/Habitacion4.cshtml
@@ -1,12 +1,12 @@
 @{
-    ViewData["Title"] = "Sotano del tesoro";
+    ViewData["Title"] = "Sótano";
 }
 
 <div class="centrado">
-    <h1>Bienvenido/a al sótano</h1>
-    <p>¡Ahoy, valientes aventureros! Han llegado al oscuro y misterioso sótano del galeón pirata. Aquí se esconde el tesoro más grande, protegido por ingeniosos acertijos y trampas. </p>
+    <h1>Sótano</h1>
+    <p>¡Ahoy, valientes aventureros! Han llegado al oscuro y misterioso sótano del galeón pirata. Aquí se esconde el tesoro más grande, protegido por ingeniosos acertijos y trampas.</p>
     <p>Solo los más astutos podrán escapar con el botín.</p>
-    <p> Pista: Las dos espadas cruzadas no es la letra b, fijate un icono que sea parecido </p>
+    <p>Pista: Las dos espadas cruzadas no es la letra B, fijate un icono que sea parecido.</p>
 
     <div class="imagenInteractiva">
         <img src="~/img/h4-sotano.jpg" alt="Sotano">
