--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -123,14 +123,8 @@ ul {
   width: 100%;
   height: 100%;
 }
-.imagenInteractiva img:hover {
-  background-image: url("/img/mano.jpg");
-  background-position: bottom right;
-  background-repeat: no-repeat;
-  background-size: 50%;
-  top: 0%;
-  left: 0%;
-  transition: 0.2s;
+.imagenInteractiva:first {
+  background: transparent;
 }
 #pergamino {
   position: absolute;
@@ -139,6 +133,17 @@ ul {
   width: 8%;
   transform: rotate(-8deg);
 }
+#carta {
+  position: absolute;
+  top: 30%;
+  left: 71%;
+  width: 8%;
+  transform: rotateX(-15deg) rotateY(40deg) rotateZ(15deg);
+}
+#carta div {
+  display: none;
+  padding: 5px;
+}
 #tabla_de_codigos {
   position: absolute;
   top: 72%;
@@ -146,11 +151,38 @@ ul {
   width: 8%;
   transform: rotateX(60deg) rotateY(10deg) rotateZ(50deg);
 }
+
+.imagenInteractiva img:hover, .imagenInteractiva div:hover {
+  background-image: url("/img/mano.jpg");
+  background-position: bottom right;
+  background-repeat: no-repeat;
+  background-size: 50%;
+  top: 0%;
+  left: 0%;
+  transition: 0.2s;
+}
 #pergamino:hover {
   top: 15%;
   left: 10%;
   width: 50%;
   transform: rotate(0);
+}
+#carta:hover {
+  top: 3%;
+  left: 3%;
+  width: 94%;
+  height: 94%;
+  background: rgb(251, 251, 251);
+  color: #000000;
+  transform: rotate(0);
+  overflow-y: auto;
+}
+#carta:hover div {
+  display: block;
+  background: transparent;
+}
+#carta:hover img {
+  display: none;
 }
 #tabla_de_codigos:hover {
   top: 3%;
