Hacer pistas más claras en la habitación 2

--- a/Views/Home/Habitacion2.cshtml
+++ b/Views/Home/Habitacion2.cshtml
@@ -10,7 +10,7 @@
     <h1>Camarote</h1>
     <p>¡Bienvenidos a la segunda etapa de vuestra aventura de escape en alta mar! Habéis superado con éxito los desafíos de la bodega principal y ahora nos adentramos en el misterioso camarote del capitán.</p>
     <p>¡La aventura te espera! Recuerden trabajar en equipo, observar cada detalle y estar preparados para cualquier sorpresa que pueda surgir en su camino. El destino de la tripulación depende de su habilidad para resolver los enigmas que los esperan en esta segunda sala.</p>
-    <p>¿Estan listos para desafiar sus mentes y conocimiento de números binarios y del abecedario español?</p>
+    <p>¿Estan listos para desafiar sus mentes y su conocimiento de los números binarios y el órden del abecedario español?</p>
 
     <div class="imagenInteractiva">
         <img src="~/img/h2-camarote.jpg" alt="Camarote">
