Reorganizar CSS, cambiar nombre a imagen y terminar sala de victoria

--- a/Views/Home/Habitacion3.cshtml
+++ b/Views/Home/Habitacion3.cshtml
@@ -12,7 +12,7 @@
     <p>Buena suerte!!</p>
 
     <div id="cubierta" class="centrado">
-        <img id="imagenLoro" src="~/img/h3-loro.gif" alt="Loro pirata">
+        <img id="imagenLoroH3" src="~/img/loro.gif" alt="Loro pirata">
         <div id="memotest">
             <noscript>
                 <p>Lo siento, pero esta parte de la aventura requiere de Javascript. Por favor, habilitelo si quiere continuar.</p>
