--- a/Views/Home/Habitacion4.cshtml
+++ b/Views/Home/Habitacion4.cshtml
@@ -10,7 +10,7 @@
 
     <div class="imagenInteractiva">
         <img src="~/img/h4-sotano.jpg" alt="Sotano">
-        <img id="tabla_de_codigos" src="~/img/h4-tabla_de_codigos.jpg" alt="Tabla de códigos">
+        <img id="tablaDeCodigos" src="~/img/h4-tabla_de_codigos.jpg" alt="Tabla de códigos">
     </div>
     
     <form action='@Url.Action("Habitacion")'>
