--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,10 @@
         <!-- por hacer: imgs descriptivas + slogan -->
         <img src="~/img/Index.gif" alt="Camarote">
     </div>
-    <p><a href='@Url.Action("Creditos")'>Creditos</a></p>
+    <p>
+        <a href='@Url.Action("Comenzar")'>Comenzar</a>
+        <a href='@Url.Action("Creditos")'>Creditos</a>
+    </p>
 </div>
 
     
