--- a/Views/Home/Victoria.cshtml
+++ b/Views/Home/Victoria.cshtml
@@ -2,11 +2,14 @@
     ViewData["Title"] = "VICTORIA";
 }
 
-<div>
-    <h1>Felicidades :-) ahora te ganaste este barco pirata</h1>
-    <div>
-            <!-- por hacer: imgs descriptivas + slogan --> 
+<div class="centrado">
+    <h1>Felicidades</h1>
+    <p>No solo has obtenido un tesoro, si no que has logrado okupar este barco pirata que aparentemente solo estaba siendo ocupado por este loro, quien se habia hecho pasar por la Capitana Morgana porque habeís intentado ahondar sin permiso el barco e intentaba impresionarla atrapandolos.</p>
+    <p>Finalmente, hacen las pases con el loro y roban el botín. Como concecuencia, ¡ganaste este barco pirata!</p>
+    
+    <div class="imagenInteractiva">
+        <img src="~/img/victoria-barco.jpg" alt="Barco">
+        <a id="ustedes" href="https://www.youtube.com/watch?v=jZiYZbh78uY"><img src="~/img/victoria-ustedes.gif" alt="Fernanfloo (ustedes)"></a>
+        <a id="imagenLoroVictoria" href="https://www.youtube.com/watch?v=jZiYZbh78uY"><img src="~/img/loro.gif" alt="Loro"></a>
     </div>
-    <img src = "~/img/barco pirata final.jpg">
-    <p><a href='@Url.Action("Creditos")'>Creditos</a></p>
 </div>
