--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -128,67 +128,78 @@ ul {
 }
 #pergamino {
   position: absolute;
+  width: 8%;
   top: 50%;
   left: 20%;
-  width: 8%;
   transform: rotate(-8deg);
 }
 #carta {
   position: absolute;
+  width: 8%;
   top: 30%;
   left: 71%;
-  width: 8%;
   transform: rotateX(-15deg) rotateY(40deg) rotateZ(15deg);
 }
 #carta div {
   display: none;
   padding: 5px;
 }
-#tabla_de_codigos {
+#tablaDeCodigos {
   position: absolute;
+  width: 8%;
   top: 72%;
   left: 70%;
-  width: 8%;
   transform: rotateX(60deg) rotateY(10deg) rotateZ(50deg);
+}
+#ustedes {
+  position: absolute;
+  background: transparent;
+  width: 22%;
+  top: 2.5%;
+  left: 2%;
+}
+#imagenLoroVictoria {
+  position: absolute;
+  background: transparent;
+  width: 32%;
+  top: 0%;
+  right: 0%;
 }
 
 .imagenInteractiva img:hover, .imagenInteractiva div:hover {
+  transition: 0.2s;
+}
+#pergamino:hover {
   background-image: url("/img/mano.jpg");
   background-position: bottom right;
   background-repeat: no-repeat;
   background-size: 50%;
-  top: 0%;
-  left: 0%;
-  transition: 0.2s;
-}
-#pergamino:hover {
+  width: 50%;
   top: 15%;
   left: 10%;
-  width: 50%;
   transform: rotate(0);
 }
 #carta:hover {
-  top: 3%;
-  left: 3%;
-  width: 94%;
-  height: 94%;
   background: rgb(251, 251, 251);
   color: #000000;
+  width: 94%;
+  height: 94%;
+  top: 3%;
+  left: 3%;
   transform: rotate(0);
   overflow-y: auto;
 }
 #carta:hover div {
   display: block;
-  background: transparent;
 }
 #carta:hover img {
   display: none;
 }
-#tabla_de_codigos:hover {
+#tablaDeCodigos:hover {
+  width: 40%;
   top: 3%;
   left: 58%;
   transform: rotate(0);
-  width: 40%;
 }
 
 
@@ -198,7 +209,7 @@ ul {
   background-size: cover;
   width: 100%;
 }
-#imagenLoro {
+#imagenLoroH3 {
   width: 25%;
   height: auto;
 }
