--- a/Views/Home/Habitacion4.cshtml
+++ b/Views/Home/Habitacion4.cshtml
@@ -1,29 +1,15 @@
 @{
+    Layout = "~/Views/Shared/_Habitacion.cshtml";
+    ViewData["Number"] = 4;
     ViewData["Title"] = "Sótano";
 }
 
-<div class="centrado">
-    <h1>Sótano</h1>
-    <p>¡Ahoy, valientes aventureros! Han llegado al oscuro y misterioso sótano del galeón pirata. Aquí se esconde el tesoro más grande, protegido por ingeniosos acertijos y trampas.</p>
-    <p>Solo los más astutos podrán escapar con el botín.</p>
-    <p>Pista: Las dos espadas cruzadas no es la letra B, fijate un icono que sea parecido.</p>
+<h1>Sótano</h1>
+<p>¡Ahoy, valientes aventureros! Han llegado al oscuro y misterioso sótano del galeón pirata. Aquí se esconde el tesoro más grande, protegido por ingeniosos acertijos y trampas.</p>
+<p>Solo los más astutos podrán escapar con el botín.</p>
+<p>Pista: Las dos espadas cruzadas no es la letra B, fijate un icono que sea parecido.</p>
 
-    <div class="imagenInteractiva">
-        <img src="~/img/h4-sotano.jpg" alt="Sotano">
-        <img id="tablaDeCodigos" src="~/img/h4-tabla_de_codigos.jpg" alt="Tabla de códigos">
-    </div>
-    
-    <form action='@Url.Action("Habitacion")'>
-        <p>
-            <input type="hidden" name="sala" value="4">
-            @if (ViewBag.Error != null) {
-                <input type="text" name="clave" placeholder="@ViewBag.Error" autocomplete="off" required>
-                <input class="rebotado" type="submit" value="🔒">
-            } else {
-                <input type="text" name="clave" placeholder="Clave" autocomplete="off" required>
-                <input type="submit" value="🔒">
-            }
-        </p>
-        <p>No escribir tildes.</p>
-    </form>
+<div class="imagenInteractiva">
+    <img src="~/img/h4-sotano.jpg" alt="Sótano">
+    <img id="tablaDeCodigos" src="~/img/h4-tabla_de_codigos.jpg" alt="Tabla de códigos">
 </div>
